--- a/cems-api.yml
+++ b/cems-api.yml
@@ -175,7 +175,30 @@ paths:
           description: "User was authenticated but not authorized"
         404:
           description: "Company not found"
-
+  /company/{company_id}/corpadminreport:
+    get:
+      tags:
+        - "Company"
+      summary: "Get all corp admin reports for a company"
+      description: ""
+      parameters:
+        - in: "path"
+          name: "company_id"
+          description: ""
+          required: true
+          type: "integer"
+          pattern: '\d+'
+      responses:
+        200:
+          description: "Success"
+          schema:
+            $ref: "#/definitions/CorpAdminReport"
+        401:
+          description: "Not authenticated"
+        403:
+          description: "User was authenticated but not authorized"
+        404:
+          description: "Company not found"
   /company/{company_id}/courses:
     get:
       tags:
@@ -1149,6 +1172,103 @@ definitions:
             name: 
               type: "string"
               example: "Abuse/Neglect"
+              
+  CorpAdminReport:
+    type: "object"
+    required: 
+      - "data"
+    properties: 
+      data: 
+        type: "object"
+        required: 
+          - "Student Activity"
+          - "Curriculum"
+          - "Students"
+          - "Utilization"
+        properties: 
+          Student Activity: 
+            type: "array"
+            items: 
+              type: "object"
+              properties: 
+                id: 
+                  type: "number"
+                  example: 1
+                name: 
+                  type: "string"
+                  example: "All Courses - All Statuses"
+                applicable_filters: 
+                  type: "array"
+                  items: 
+                    type: "string"
+                  example: 
+                    - "license_type"
+                    - "access_level"
+                    - "organizational_unit"
+                    - "group"
+                    - "hire_date"
+                    - "company_enrollment_date"
+                    - "course"
+                    - "curriculum"
+          Curriculum: 
+            type: "array"
+            items: 
+              type: "object"
+              properties: 
+                id: 
+                  type: "number"
+                  example: 9
+                name: 
+                  type: "string"
+                  example: "Curriculum - Percent Complete Report"
+                applicable_filters: 
+                  type: "array"
+                  items: 
+                    type: "string"
+                  example: 
+                    - "license_type"
+                    - "access_level"
+                    - "organizational_unit"
+                    - "group"
+                    - "hire_date"
+                    - "company_enrollment_date"
+                    - "curriculum"
+          Students: 
+            type: "array"
+            items: 
+              type: "object"
+              properties: 
+                id: 
+                  type: "number"
+                  example: 14
+                name: 
+                  type: "string"
+                  example: "Active Students"
+                applicable_filters: 
+                  type: "array"
+                  items: 
+                    type: "string"
+                  example: 
+                    - "license_type"
+                    - "access_level"
+                    - "organizational_unit"
+                    - "group"
+                    - "hire_date"
+                    - "company_enrollment_date"
+          Utilization: 
+            type: "array"
+            items: 
+              type: "object"
+              properties: 
+                id: 
+                  type: "number"
+                  example: 17
+                name: 
+                  type: "string"
+                  example: "Utilization - Last Month"
+                applicable_filters: 
+                  type: "string"
+                  example: "null"
 
   CompanyCourses:
     type: "object"
