Add GET for group associated with company by group ID

--- a/cems-api.yml
+++ b/cems-api.yml
@@ -413,7 +413,55 @@ paths:
           description: "Not authenticated"
         403:
           description: "User was authenticated but not authorized"
-          
+  /company/{company_id}/group/{group_id}:
+    get:
+      tags:
+        - "Company"
+      summary: "Get a group associated with the company by group ID"
+      description: ""
+      parameters:
+        - name: "company_id"
+          in: "path"
+          description: ""
+          required: true
+          type: "integer"
+          pattern: '\d+'
+        - name: "group_id"
+          in: "path"
+          description: ""
+          required: true
+          type: "integer"
+          pattern: '\d+'
+      responses:
+        200:
+          description: "Success"
+          schema:
+            type: "object"
+            required: 
+              - "data"
+            properties: 
+              data:
+                type: "object"
+                required: 
+                  - "id"
+                  - "name"
+                  - "users"
+                properties: 
+                  id: 
+                    type: "number"
+                    example: 123
+                  name: 
+                    type: "string"
+                    example: "Clinical Staff"
+                  users: 
+                    type: "number"
+                    example: 1
+        401:
+          description: "Not authenticated"
+        403:
+          description: "User was authenticated but not authorized"
+        404:
+          description: "Company or group ID not found"
   /company/{alias}/config:
     get:
       tags:
