--- a/cems-api.yml
+++ b/cems-api.yml
@@ -335,7 +335,47 @@ paths:
           description: "User was authenticated but not authorized"
         404:
           description: "Company not found"
-          
+  /company/{company_id}/license_group:
+    get:
+      tags:
+        - "Company"
+      summary: "Lists license types for a company"
+      description: ""
+      parameters:
+        - in: "path"
+          name: "company_id"
+          description: ""
+          required: true
+          type: "integer"
+          pattern: '\d+'
+      responses:
+        200:
+          description: "Success"
+          schema:
+            type: "object"
+            required: 
+              - "data"
+            properties: 
+              data: 
+                type: "array"
+                items: 
+                  type: "object"
+                  properties: 
+                    id: 
+                      type: "number"
+                      example: 5
+                    name: 
+                      type: "string"
+                      example: "RN"
+                    constant: 
+                      type: "string"
+                      example: "rn"
+        401:
+          description: "Not authenticated"
+        403:
+          description: "User was authenticated but not authorized"
+        404:
+          description: "Company not found"
   /company/{company_id}/organizational-unit/list:
     get:
       tags:
